Fri Sep 28 13:14:34 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: now VM_DEBUG_BP_CHECK should be 1.

Fri Sep 28 12:51:54 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: remove rb_control_frame_t::bp (bp: base pointer).
	  `bp' can be calculate by `sp' (stack pointer) of previous frame.
	  Now, `bp_check' field is remained for debug.  You can eliminate
	  this field by setting  VM_DEBUG_BP_CHECK as 0.

	* vm_insnhelper.c (vm_base_ptr): add `vm_base_ptr(cfp).
	  This function calculates base pointer from cfp.

	* vm_insnhelper.c (vm_setup_method): push `recv' value on top of
	  value stack (before method parameters).
	  This change is for keeping consistency with normal method dispatch.

	* insns.def: fix to use vm_base_ptr().

	* vm.c (vm_exec): ditto.

	* vm_dump.c: remove `bp' related dumps.

	* cont.c (fiber_init): fix to check VM_DEBUG_BP_CHECK.

Fri Sep 28 10:40:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): accept File::Constants as well as mode string.
	  based on the patch by Glass_saga (Masaki Matsushita) in
	  [ruby-core:47694].  [Feature #7067]

Thu Sep 27 18:36:51 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_overlay_module, rb_mod_refine): accept a module as the
	  argument of Module#refine.

	* vm_method.c (search_method): if klass is an iclass, lookup the
	  original module of the iclass in omod in order to allow
	  refinements of modules.

	* test/ruby/test_refinement.rb: add tests for the above changes.

Thu Sep 27 18:12:20 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/syslog/lib/syslog/logger.rb: add a formatter to the
	  Syslog::Logger object. [Bug #7065]
	* test/syslog/test_syslog_logger.rb: ditto.

Wed Sep 26 16:39:57 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def: add new instruction `opt_empty_p' for optimize `empty?'
	  method.  Apply a patch proposed at [ruby-dev:46120]
	  [ruby-trunk - Feature #6972] by Glass_saga (Masaki Matsushita).
