@@ -531,7 +531,6 @@ count_nodes(int argc, VALUE *argv, VALUE os)
 		COUNT_NODE(NODE_ATTRASGN);
 		COUNT_NODE(NODE_PRELUDE);
 		COUNT_NODE(NODE_LAMBDA);
-		COUNT_NODE(NODE_OPTBLOCK);
 #undef COUNT_NODE
 	      default: node = INT2FIX(nodes[i]);
 	    }
